# Yousify

./: .gitignore  README.md  README_fingerprint_removed.md  SPOTIFY_INTEGRATION.md  build.gradle.kts  compile_debug_kotlin.txt  gradle.properties  settings.gradle.kts  stress.sh
app/: build.gradle.kts  lint-baseline.xml  wrongs.txt
app/schemas/com.veshikov.Yousify.player.SponsorBlockDatabase/: 1.json
app/schemas/com.veshikov.yousify.youtube.SearchCacheDatabase/: 1.json
app/src/androidTest/java/com/mvwj/yousify/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/veshikov/try2/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/veshikov/youfy/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/veshikov/yousify/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  AndroidManifest.xml~
app/src/main/cpp/: CMakeLists.txt  FaissHelper.cpp
app/src/main/res/drawable/: ic_login.xml  ic_notification_icon.xml  ic_pause.xml  ic_playlist_placeholder.xml  ic_refresh.xml  ic_skip_next.xml  ic_skip_previous.xml  ic_timeline.xml  ic_track_placeholder.xml  liked_songs_border.xml
app/src/main/res/layout/: activity_main.xml  activity_playlist.xml  activity_tracks.xml  content_tracks.xml  item_playlist.xml  item_track.xml  mini_player.xml  player_legacy.xml  view_mini_player_xml.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+134 files in other folders)
